--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">1.1.</strong> Summary</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">1.2.</strong> Required reading</div></li></ol></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> New project</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Project configuration</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Building &amp; Running</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="introduction/summary.html"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="introduction/reading.html"><strong aria-hidden="true">1.2.</strong> Required reading</a></li></ol></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Project configuration</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Building &amp; Running</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -168,10 +168,49 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<p>Hello, and welcome to the Gameboy Software Development Kit documentation, GBSDK for short.</p>
+<p>First off, if you need any help. Drop by our chat. There are various communication methods. See <a href="https://gbdev.io/chat.html">gbdev chat</a>.
+There are many people in there that can help with any kind of problem.</p>
+<p>Next up:</p>
+<ul>
+<li><a href="introduction/summary.html">Summary</a>: Explains the goals of the project, limitations and other important bits.</li>
+<li><a href="introduction/reading.html">Required reading</a>: Lists essential knowledge and reading to work with the Gameboy and the GBSDK</li>
+</ul>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="summary"><a class="header" href="#summary">Summary</a></h1>
+<p>The goal of GBSDK is as following:</p>
+<p><strong>Provide an environment to allow C and Assembly programming for the Gameboy, with a low amount of abstraction.</strong></p>
+<p>To compare it with two other well known environments:</p>
+<h2 id="a-hrefhttpsgithubcomgbdk-2020gbdk-2020gbdk-2020a"><a class="header" href="#a-hrefhttpsgithubcomgbdk-2020gbdk-2020gbdk-2020a"><a href="https://github.com/gbdk-2020/gbdk-2020">GBDK-2020</a></a></h2>
+<p>GBDK-2020 provides a C programming environment. It hides a few hardware details behind abstractions, and it provides high level functions for some parts, while low level for other parts.
+Which results in people not understanding what the hardware is doing and why things are not working as expected.</p>
+<p>A simple example is <code>printf()</code> which GBDK-2020 provides. It allows writting text to the screen. But, the Gameboy does not have any text output, it has a tile based rendering.
+So this uses a large amount of available graphic tiles to provide this text drawing facility. It makes drawing text easy, but also adds multiple layers of hidden behavior.</p>
+<h2 id="a-hrefhttpsrgbdsgbdeviorgbdsa"><a class="header" href="#a-hrefhttpsrgbdsgbdeviorgbdsa"><a href="https://rgbds.gbdev.io/">rgbds</a></a></h2>
+<p>rgbds is the nr1 used assembler for Gameboy programming. If you want to do assembly for the gameboy, then rgbds is your friend. And GBSDK uses rgbds as well!</p>
+<p>However, stand alone it only provides the assembler and nothing more. No default project setup, no intergration with C, everything else you'll need to do yourself.</p>
+<h2 id="so-gbsdk"><a class="header" href="#so-gbsdk">So, GBSDK</a></h2>
+<p>So, GBSDK stands a bit in the middle between rgbds and GBDK-2020. It does provide the facilities to program in C. But it does not provide high level abstractions, it only provides
+the facilities to access the hardware.</p>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="required-reading"><a class="header" href="#required-reading">Required reading</a></h1>
+<p>To use GBSDK you best have a few other resources at hand.</p>
+<ul>
+<li><a href="https://gbdev.io/pandocs/">Pandocs</a>: The ultimate resource. Read this, memorize it. Read it again. Everything about how the hardware works is in here.
+And some things are essential to understand. Especially most of the rendering section (everything except the Pixel FIFO).</li>
+<li>Some kind of C tutorial. If you don't know how to program in C yet, you better get some basic understanding of what functions, variables, parameters, globals, locals, etc are. (still need some recommendation for the best tutorial)</li>
+</ul>
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="setup"><a class="header" href="#setup">Setup</a></h1>
+<p>The following chapters will outline how to get started with GBSDK:</p>
+<ul>
+<li><a href="setup/installation.html">Installation</a>: Installing the required tools &amp; environment.</li>
+<li><a href="setup/newproject.html">New project</a>: How to setup your first project.</li>
+<li><a href="">Project configuration</a>: How to configure your project, what choices to make.</li>
+<li><a href="">Building &amp; Running</a>: How to build your project, and run it in an emulator.</li>
+</ul>
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
 <h2 id="windows"><a class="header" href="#windows">Windows</a></h2>
-<p>TODO: Package everything in a nice to install zip file, else it's a big mess for your users.</p>
+<p>Download the latest release package from <a href="https://github.com/daid/gbsdk-winenv/releases">gbsdk-winenv</a> and extract it somewhere.</p>
+<p>Running the <code>gbsdk-bash.exe</code> will give you a commandline shell where you can do builds (all required tools are installed in this)</p>
+<p>Alternatively, install WSL (if you have Windows 10) and follow the linux setup.</p>
 <h2 id="linux"><a class="header" href="#linux">Linux</a></h2>
 <p>You'll need to install the following tools, everything can be newer then the specified versions, specified versions are minimal known working versions.</p>
 <ul>
@@ -203,7 +242,8 @@ cd ..
 
 </code></pre>
 <h2 id="macos"><a class="header" href="#macos">MacOS</a></h2>
-<p>Seriously. No clue, follow Linux installation mostly, I guess.</p>
+<p>Seriously. No clue, follow Linux installation mostly, I guess. Something something <code>brew</code> instead of <code>apt-get</code>?</p>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="new-project"><a class="header" href="#new-project">New project</a></h1>
 
                     </main>
 
