--- a/introduction/reading.html
+++ b/introduction/reading.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Required reading - Gameboy Software Development Kit</title>
+        <title>Additional reading - Gameboy Software Development Kit</title>
         
         
 
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../introduction/summary.html"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="../introduction/reading.html" class="active"><strong aria-hidden="true">1.2.</strong> Required reading</a></li></ol></li><li class="chapter-item expanded "><a href="../setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Project configuration</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Building &amp; Running</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../introduction/summary.html"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="../introduction/reading.html" class="active"><strong aria-hidden="true">1.2.</strong> Additional reading</a></li></ol></li><li class="chapter-item expanded "><a href="../setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><a href="../setup/configuration.html"><strong aria-hidden="true">2.3.</strong> Project configuration</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Building &amp; Running</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -165,12 +165,12 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="required-reading"><a class="header" href="#required-reading">Required reading</a></h1>
+                        <h1 id="additional-reading"><a class="header" href="#additional-reading">Additional reading</a></h1>
 <p>To use GBSDK you best have a few other resources at hand.</p>
 <ul>
-<li><a href="https://gbdev.io/pandocs/">Pandocs</a>: The ultimate resource. Read this, memorize it. Read it again. Everything about how the hardware works is in here.
+<li><a href="https://gbdev.io/pandocs/">Pandocs</a>: The ultimate resource. Read this, memorize it. Read it again. Everything about how the gameboy hardware works is in here.
 And some things are essential to understand. Especially most of the rendering section (everything except the Pixel FIFO).</li>
-<li>Some kind of C tutorial. If you don't know how to program in C yet, you better get some basic understanding of what functions, variables, parameters, globals, locals, etc are. (still need some recommendation for the best tutorial)</li>
+<li>Some kind of C tutorial. If you don't know how to program in C yet, you better get some basic understanding of what functions, variables, parameters, globals, locals, etc are. <em>(still need some recommendation for a good tutorial)</em></li>
 </ul>
 
                     </main>
