--- a/introduction/summary.html
+++ b/introduction/summary.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../introduction/summary.html" class="active"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="../introduction/reading.html"><strong aria-hidden="true">1.2.</strong> Required reading</a></li></ol></li><li class="chapter-item expanded "><a href="../setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Project configuration</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Building &amp; Running</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../introduction/summary.html" class="active"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="../introduction/reading.html"><strong aria-hidden="true">1.2.</strong> Additional reading</a></li></ol></li><li class="chapter-item expanded "><a href="../setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><a href="../setup/configuration.html"><strong aria-hidden="true">2.3.</strong> Project configuration</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Building &amp; Running</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -168,18 +168,27 @@
                         <h1 id="summary"><a class="header" href="#summary">Summary</a></h1>
 <p>The goal of GBSDK is as following:</p>
 <p><strong>Provide an environment to allow C and Assembly programming for the Gameboy, with a low amount of abstraction.</strong></p>
+<p>Also note that this targets the following hardware:</p>
+<ul>
+<li>DMG: Origonal gameboy (First version, known as the gray brick)</li>
+<li>SGB: Super Gameboy (Running gameboy games on the Super Nintendo)</li>
+<li>CGB: Gameboy Color (Adds color support and a few more minor features)</li>
+</ul>
+<p><em>Note that the Gameboy Advanced is a very different device. And not part of the targets for GBSDK. The Gameboy Advanced has a Gameboy Compatibility mode, which is essentially a Gameboy Color (CGB).
+But full Gameboy Advanced development information can be found on <a href="https://gbadev.net/">gbadev</a>]</em></p>
 <p>To compare it with two other well known environments:</p>
 <h2 id="a-hrefhttpsgithubcomgbdk-2020gbdk-2020gbdk-2020a"><a class="header" href="#a-hrefhttpsgithubcomgbdk-2020gbdk-2020gbdk-2020a"><a href="https://github.com/gbdk-2020/gbdk-2020">GBDK-2020</a></a></h2>
 <p>GBDK-2020 provides a C programming environment. It hides a few hardware details behind abstractions, and it provides high level functions for some parts, while low level for other parts.
 Which results in people not understanding what the hardware is doing and why things are not working as expected.</p>
 <p>A simple example is <code>printf()</code> which GBDK-2020 provides. It allows writting text to the screen. But, the Gameboy does not have any text output, it has a tile based rendering.
 So this uses a large amount of available graphic tiles to provide this text drawing facility. It makes drawing text easy, but also adds multiple layers of hidden behavior.</p>
+<p>Both GBDK-2020 and GBSK use <a href="http://sdcc.sourceforge.net/">sdcc</a> as a C compiler. So the basic C support is the same, but the libraries and build systems are very different.</p>
 <h2 id="a-hrefhttpsrgbdsgbdeviorgbdsa"><a class="header" href="#a-hrefhttpsrgbdsgbdeviorgbdsa"><a href="https://rgbds.gbdev.io/">rgbds</a></a></h2>
 <p>rgbds is the nr1 used assembler for Gameboy programming. If you want to do assembly for the gameboy, then rgbds is your friend. And GBSDK uses rgbds as well!</p>
 <p>However, stand alone it only provides the assembler and nothing more. No default project setup, no intergration with C, everything else you'll need to do yourself.</p>
 <h2 id="so-gbsdk"><a class="header" href="#so-gbsdk">So, GBSDK</a></h2>
 <p>So, GBSDK stands a bit in the middle between rgbds and GBDK-2020. It does provide the facilities to program in C. But it does not provide high level abstractions, it only provides
-the facilities to access the hardware.</p>
+the facilities to access the hardware. It also integrates with rgbds as an assembler, instead of using the asxxxx assembler that sdcc uses by default.</p>
 
                     </main>
 
