--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="introduction/summary.html"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="introduction/reading.html"><strong aria-hidden="true">1.2.</strong> Additional reading</a></li></ol></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><a href="setup/configuration.html"><strong aria-hidden="true">2.3.</strong> Project configuration</a></li><li class="chapter-item expanded "><a href="setup/running.html"><strong aria-hidden="true">2.4.</strong> Building &amp; Running</a></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> C API</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Video</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Joypad</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Super Gameboy</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="introduction/summary.html"><strong aria-hidden="true">1.1.</strong> Summary</a></li><li class="chapter-item expanded "><a href="introduction/reading.html"><strong aria-hidden="true">1.2.</strong> Additional reading</a></li></ol></li><li class="chapter-item expanded "><a href="setup.html"><strong aria-hidden="true">2.</strong> Setup</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="setup/installation.html"><strong aria-hidden="true">2.1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="setup/newproject.html"><strong aria-hidden="true">2.2.</strong> New project</a></li><li class="chapter-item expanded "><a href="setup/configuration.html"><strong aria-hidden="true">2.3.</strong> Project configuration</a></li><li class="chapter-item expanded "><a href="setup/running.html"><strong aria-hidden="true">2.4.</strong> Building &amp; Running</a></li></ol></li><li class="chapter-item expanded "><a href="api/c.html"><strong aria-hidden="true">3.</strong> C API</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="api/c/hardware.html"><strong aria-hidden="true">3.1.</strong> Registers</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Assets</div></li><li class="chapter-item expanded "><a href="api/c/video.html"><strong aria-hidden="true">3.3.</strong> Video</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.1.</strong> Background</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.2.</strong> Sprites</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.3.</strong> Gameboy Color</div></li></ol></li><li class="chapter-item expanded "><a href="api/c/joypad.html"><strong aria-hidden="true">3.4.</strong> Joypad</a></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> Banking</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.6.</strong> Super Gameboy</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -333,6 +333,68 @@ it never really matches the real deal.</p>
 <p>In some cases, if you rename files, you might get an <code>No rule to make target</code> error. In this case first run <code>make clean</code>. This is an issue that still needs to be solved in GBSDK.</p>
 <p><strong>Stay away from VisualBoyAdvance</strong> this emulator is used a lot, but it is buggy and broken accuracy wise. There is a good chance that you make your rom bug free on this emulator and that it does not run
 on real hardware.</p>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="c-api"><a class="header" href="#c-api">C API</a></h1>
+<p>The C API is divided into multiple sections. All the following sections go into the details on what functions are provided and how to use them.</p>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="registers"><a class="header" href="#registers">Registers</a></h1>
+<p>By including the file <code>sdk/hardware.h</code> you will get access to all the registers mentioned in the <a href="https://gbdev.io/pandocs/">Pan Docs</a>. See the <a href="https://github.com/daid/gbsdk/blob/master/inc/sdk/hardware.h">include file</a> for all possible registers and bit definitions.</p>
+<p>Each register is prefixed with an <code>r</code>, so <code>LCDC</code> becomes <code>rLCDC</code>. Registers that are CGB only will only be available of the CGB is enabled in the project configuration.</p>
+<p>Next to the registers, a few other macros are provided for working with interrupts:</p>
+<ul>
+<li><code>HALT()</code>: execute the <code>halt</code> instruction, which will wait for an interrupt.</li>
+<li><code>DISABLE_INTERRUPTS()</code>: Disables the global interrupt mask, no interrupts will execute interrupt handlers.</li>
+<li><code>ENABLE_INTERRUPTS()</code>: Enable the global interrupt mask. Any enabled interrupt in <code>rIE</code> will execute the interrupt handler.</li>
+</ul>
+<p>Examples:</p>
+<pre><code class="language-c">#include &lt;gbsdk/hardware.h&gt;
+
+
+void function() {
+	//Enable the LCD with the background and the window enabled.
+	// Use the memory at 0x9800 for the background tilemap, and at 0x9C00 for the window tilemap.
+	rLCDC = LCDC_ON | LCDC_WINON | LCDC_WIN9C00 | LCDC_BGON;
+	
+	//Set a default background palette with all 4 colors.
+	rBGP = 0b11100100;
+	
+	//Set the window start somewhere on the screen.
+	rWX = 100;
+	rWY = 100;
+}
+</code></pre>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="video"><a class="header" href="#video">Video</a></h1>
+<p>TODO</p>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="joypad"><a class="header" href="#joypad">Joypad</a></h1>
+<p>The joypad functionality is provided by <code>sdk/joypad.h</code>.</p>
+<p>It provides the following features:</p>
+<ul>
+<li><code>void joypad_update(void)</code>: function to update the joypad values. This should usually be called once a frame.</li>
+<li><code>uint8_t joypad_state</code>: variable that contains buttons held at the last <code>joypad_update()</code> call.</li>
+<li><code>uint8_t joypad_pressed</code>: variable that contains buttons that where pressed down at the last <code>joypad_update()</code> call but not at the <code>joypad_update()</code> call before that (newly pressed buttons)</li>
+<li><code>PAD_DOWN PAD_UP PAD_LEFT PAD_RIGHT PAD_START PAD_SELECT PAD_B PAD_A</code>: bit definitions for <code>joypad_state</code> and <code>joypad_pressed</code></li>
+</ul>
+<p>Example usage:</p>
+<pre><code class="language-c">#include &lt;sdk/joypad.h&gt;
+#include &lt;sdk/hardware.h&gt;
+
+uint8_t value;
+
+void function() {
+	while(1) {
+		// Update the joypad_state and joypad_pressed variables
+		update_joypad();
+
+		// Break out of the loop if start or select is pressed
+		if (joypad_pressed &amp; (PAD_START | PAD_SELECT))
+			break;
+
+		// If left is hold down, change some value
+		if (joypad_state &amp; PAD_LEFT)
+			value = value - 1;
+
+		//Assumes vblank interrupt is setup
+		HALT();
+	}
+}</code></pre>
 
                     </main>
 
