deploy: 9f8afb91702c0dafb86342f92a98f41976230414

--- a/setup/newproject.html
+++ b/setup/newproject.html
@@ -190,7 +190,7 @@ git clone https://github.com/daid/gbsdk-template.git --recursive
 <h3 id="makefile"><a class="header" href="#makefile">Makefile</a></h3>
 <p>The Makefile is very bare bones, it just needs to define some project settings. So make a new empty text file with the following contents:</p>
 <pre><code class="language-makefile"># Name of your project, will set the name of your ROM.
-PROJECT_NAME := Project Name
+PROJECT_NAME := Project_Name
 # Run &quot;rgbfix --mbc-type help&quot; for possible MBC types
 MBC     := ROM
 # Target should be a combination of DMG, CGB and SGB
